--- a/account/build.gradle
+++ b/account/build.gradle
@@ -23,6 +23,12 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.3.1'
+	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.3.3'
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+	implementation('org.projectlombok:lombok')
+	annotationProcessor('org.projectlombok:lombok')
+
+
 }
 
 tasks.named('test') {
