--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=account
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/c_keeper_account_db
+spring.datasource.username=c_keeper
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+# ??? ?? ?????? ? ?
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.max-lifetime=2000000
