--- a/account/build.gradle
+++ b/account/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
 	implementation('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
 
 
 }
