--- a/account/build.gradle
+++ b/account/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 	implementation('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
-
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 }
 
