--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -9,8 +9,15 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
-# ??? ?? ?????? ? ?
+#??? ??
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.max-lifetime=2000000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=seop0937@gmail.com
+spring.mail.password=biey ftap rqat jyru
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
