--- a/account/build.gradle
+++ b/account/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	annotationProcessor('org.projectlombok:lombok')
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '3.3.0'
+	testImplementation group: 'junit', name: 'junit', version: '4.4'
 
 }
 
