--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=c_keeper
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+# validate
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
@@ -21,3 +22,5 @@ spring.mail.username=seop0937@gmail.com
 spring.mail.password=biey ftap rqat jyru
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.cache.type=simple
