--- a/account/build.gradle
+++ b/account/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '3.3.0'
 	testImplementation group: 'junit', name: 'junit', version: '4.4'
+	implementation group: 'com.github.duorourou', name: 'caffeine-cache-starter', version: '1.0.2.RELEASE'
 
 }
 
