--- a/account/build.gradle
+++ b/account/build.gradle
@@ -32,7 +32,9 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '3.3.0'
 	testImplementation group: 'junit', name: 'junit', version: '4.4'
 	implementation group: 'com.github.duorourou', name: 'caffeine-cache-starter', version: '1.0.2.RELEASE'
-
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 }
 
 tasks.named('test') {
