--- a/.github/workflows/account-cicd.yml
+++ b/.github/workflows/account-cicd.yml
@@ -34,10 +34,10 @@ jobs:
 
       - name: Build Docker image for Account
         working-directory: ./account
-        run: docker build -t testman/c-keeper:account-v${{ github.sha }} .
+        run: docker build -t grovince/c-keeper:account-v${{ github.sha }} .
 
       - name: Push Docker image for Account
-        run: docker push testman/c-keeper:account-v${{ github.sha }}
+        run: docker push grovince/c-keeper:account-v${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,7 +49,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-        script: |
-          docker pull testman/c-keeper:account-v${{ github.sha }}
+#          key: ${{ secrets.SSH_PRIVATE_KEY }}
+        run: |
+          docker pull grovince/c-keeper:account-v${{ github.sha }}
           kubectl set image deployment/backend-account-deployment backend-account=seophohoho/c-keeper:account-t1
