[feat:etc] Update git action 8

--- a/.github/workflows/account-cicd.yml
+++ b/.github/workflows/account-cicd.yml
@@ -28,7 +28,7 @@ jobs:
           SPRING_DATASOURCE_URL: ${{ secrets.DATASOURCE_URL_ACCOUNT }}
           SPRING_DATASOURCE_USERNAME: ${{ secrets.DATASOURCE_USERNAME_ACCOUNT }}
           SPRING_DATASOURCE_PASSWORD: ${{ secrets.DATASOURCE_PASSWORD_ACCOUNT }}
-        run: ./gradle build -x test
+        run: ./gradlew build -x test
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
