--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+	implementation('org.projectlombok:lombok')
+	annotationProcessor('org.projectlombok:lombok')
 }
 
 tasks.named('test') {
