--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
 	implementation('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 tasks.named('test') {
