--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
 }
 
 tasks.named('test') {
