--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	annotationProcessor('org.projectlombok:lombok')
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.named('test') {
