--- a/rentalboard/build.gradle
+++ b/rentalboard/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+	implementation group: 'org.springframework', name: 'spring-webflux', version: '6.1.13'
 
 }
 
