--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation group: 'org.springframework', name: 'spring-webflux', version: '6.1.13'
 }
 
 tasks.named('test') {
