--- a/rentalboard/build.gradle
+++ b/rentalboard/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	implementation group: 'org.springframework', name: 'spring-webflux', version: '6.1.13'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
 
 }
 
